# POO-project

./: CMakeLists.txt  Material.cpp  Material.h  README.md  Senzor.cpp  Senzor.h  SenzorContaminare.cpp  SenzorContaminare.h  SenzorGreutate.cpp  SenzorGreutate.h  UnitateReciclare.cpp  UnitateReciclare.h  imgui.ini  main.cpp
include/: Component.h  CompressedFile.h  Directory.h  EncryptedFile.h  Exception.h  Factory.h  File.h  FileFactory.h  ImageFile.h  Manager.h  Menu.h  SecureArchive.h  VFSInterface.h  VideoFile.h
src/: Component.cpp  CompressedFile.cpp  Directory.cpp  EncryptedFile.cpp  Factory.cpp  File.cpp  FileFactory.cpp  ImageFile.cpp  Manager.cpp  Menu.cpp  SecureArchive.cpp  VFSInterface.cpp  VideoFile.cpp  main.cpp
